feat: add readme file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -45,12 +45,13 @@
     }
   },
   "exclude": [
+    "node_modules",
+    "./node_modules",
     "./out/**/*",
-    "./node_modules/**/*"
+    "./node_modules/**/*",
   ],
   "include": [
     "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx"
+    "src/*"
   ]
 }
